CICO-1372 fixed issues with menu icon image visibility

--- a/stylesheets/less/admin/03_graphics.less
+++ b/stylesheets/less/admin/03_graphics.less
@@ -57,7 +57,9 @@
 
 /* Menu iconss      ==================================*/
 
+
   .icon-admin-menu {
+    
     background-image: @iconAdminMenu;
     background-repeat: no-repeat;
     background-color: transparent;
@@ -85,9 +87,7 @@
       &.moved { background-position: 0 -150px, 0 0; }
     }
 
-    &.icon-admin-componets {
-    background-image: none;
-    }
+    
 
     &.icon-user {
       background-position: 0 -200px;
@@ -123,7 +123,27 @@
       &.in-quick-menu { background-position: 0 -650px; }
       &.moved { background-position: 0 -650px, 0 0; }
     }
+    
+
+    /* Below items are added as a work around to fix rendering issues while converting css images to img tag*/
+    &.icon-admin-componets {
+    background-image: none;
+    
+    }
+    &.icon-admin-componets img {
+      width:50px;
+      height: 50px;
+      vertical-align:middle;
+    }
+    
+
   }
+  
+    .icon-admin-menu {
+    text-indent:0;
+    }
+/* workaround ends here */
+
 
 
 
